# soothsayer

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  config.example.json  install  pyproject.toml  setup  uninstall
.github/workflows/: ci.yml
docs/: asking.md  house-style.md
fixtures/: frozen-sources.json
fixtures/corpus/: good-record.json
skills/: PIPELINE.md
skills/sooth-analyze/: SKILL.md
skills/sooth-client-context/: SKILL.md
skills/sooth-communicate/: SKILL.md
skills/sooth-define/: SKILL.md
skills/sooth-explore/: SKILL.md
skills/sooth-inhouse/: SKILL.md
skills/sooth-partner-review/: SKILL.md
skills/sooth-prioritise/: SKILL.md
skills/sooth-prune/: SKILL.md
skills/sooth-research/: SKILL.md
skills/sooth-scan/: SKILL.md
skills/sooth-structure/: SKILL.md
skills/sooth-synthesize/: SKILL.md
skills/sooth-tree/: SKILL.md
skills/sooth-workplan/: SKILL.md
soothsayer/: __init__.py  __main__.py  artifacts.py  cli.py  config.py  demo.py  ingest.py  loop.py  modelclient.py  models.py  pipeline.py  skillgates.py  store.py
soothsayer/gates/: __init__.py  citation.py  independence.py  injection.py  reconcile.py  staleness.py  t0.py  tier_floor.py
tests/: test_artifacts.py  test_cli.py  test_diversity.py  test_gates.py  test_ingest.py  test_loop.py  test_pipeline_adversarial.py  test_replay.py  test_skillgates.py  test_store.py
tests/cassettes/: inhouse_converges.json
