[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "soothsayer-strategy"   # 'soothsayer' is taken on PyPI (a bioinformatics package)
version = "0.1.1"
description = "A stateless, gstack-style strategy-research harness with a deterministic gate engine."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "DrDonDon" }]
keywords = ["strategy", "research", "evidence", "gates", "harness"]
dependencies = []              # v0.1 is stdlib-only, by design

[project.scripts]
soothsayer = "soothsayer.cli:main"

[tool.setuptools.packages.find]
include = ["soothsayer*"]
